--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     </dependency>
  </dependencies>
  <build>
-    <finalName>demopipeline_test</finalName>
+    <finalName>demopipeline_minalchindhe</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -51,7 +51,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
 	    <configuration>
 		  <useSystemClassLoader>false</useSystemClassLoader>
-                 <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+                 <argLine>jdk-D.net.URLClassPath.disableClassPathURLCheck=true</argLine>
             </configuration>
             <version>3.0.0-M1</version>
       </plugin>
